# open-darf

./: .editorconfig  .env.example  .env.sample  .env.text2nkg  .gitattributes  .gitignore  .gitmodules  .pre-commit-config.yaml  .pre-commit-config.yaml.bak.20250819-161158  CHANGELOG.md  CODE_OF_CONDUCT.md  COMPREHENSIVE_TESTING.sh  CONTRIBUTING.md  CROSS_PLATFORM_VALIDATION_SUCCESS.md  GRANT_EVIDENCE.md  GRANT_EVIDENCE_COMPLETE.md  LICENSE  METRICS_EXPLANATION.md  Makefile  Makefile.legacy  OP_SCIERC_RUN_SAFE  README.impl.md  README.md  ROADMAP.md  SECURITY.md  SESSION_SUMMARY_SEPT30_WINDOWS.md  adr-contents-review.txt  adr-structure-analysis.txt  cleanup  cleanup.ps1  create_issues.sh.bak  docker-compose.yml  extractors  fix-rag-query.patch  fix.patch  install  install.ps1  install.sh  metrics_test.json  neo4j_seed.cypher  (+14 more)
.claude/: directories.manifest  workspace.json
.githooks/: pre-commit  pre-push
.github/: PULL_REQUEST_TEMPLATE.md  safety-issue.md
configs/: .env.sample  hf_config.json
constitution_engine/: graph_precedence_bridge.py  prod_posture_guard.py  validation_hook.py
constitution_graph/: __init__.py  neo4j_allow_deny.py  precedence_adapter.py
constitution_scope/: __init__.py  scope.py
datasets/: sources.json
docs/: ACADEMIC_CONTEXT.md  AGENT_OPERATING_GUIDE.md  AGENT_OPERATING_GUIDE.md.bak  AGENT_RESEARCH_GUIDE.md  AGENT_TLA_GUIDE.md  CITATION_GUIDE.md  COMMUNITY_VALIDATION.md  EVIDENCE_STANDARDS.md  INSTALL-LINUX.md  INSTALL-WINDOWS.md  INSTALLATION.md  PERFORMANCE_METHODS.md  PROVENANCE.md  README.md  REPOSITORY_STRUCTURE.md  RESULTS_INTERPRETATION.md  ROADMAP.md  ROADMAP.prev.20250822T201628Z.md  ROADMAP_2025.md  ROADMAP_2026.md  ROADMAP_PHASE4.md  ROOT_CAUSE_v010_VALIDATION.md  TECH_CARD.md  TLA_CATALOG.md  TROUBLESHOOTING.md  VALIDATION_GUIDE.md  acceptance.md  agent_operating_guide.md  automation_progression.md  git-automation-blueprint.txt  issue-labels-erd.mmd  label_mapping.md  performance_metrics.md  quickstart.md  run_eval_scored.md  scierc_char_gold.md  session-checklist.md  troubleshooting.md  validator_protocol.md  windows_native_path.md
evidence/: aggregated_metrics.json  aggregated_three_layer_metrics.json
infra/: README.md
install/: bootstrap.sh  python_cuda.sh
models/: model_registry.json
open-darf/: Makefile  install.sh
open-darf-wc/: .gitignore  Makefile.legacy  README.md  START.ps1  cleanup  docker-compose.override.yml.disabled  docker-compose.strict-off.yml  docker-compose.yml  install  run_minimal.sh  start.sh
requirements/: ml.txt  ml_bio.txt  pure.txt
scripts/: README.md  Validate-OpenDARF.ps1  bench_constitution_engine.py  ci_phase7a_checks.sh  kill_switch.sh  (+51 more)
(+1538 files in other folders)
