[tool.poetry]
name = "darf-core"
version = "0.1.0"
description = "Backend core platform for the Darf intelligence stack"
authors = ["darf"]
    {name = "darf"}
]
readme = "README.md"
[tool.poetry.dependencies]


[build-system]
[tool.poetry.group.dev.dependencies]
ruff = "0.3.7"
mypy = "^1.17.1"
pytest = "^8.4.1"
bandit = "^1.8.6"
safety = "^3.6.0"
pre-commit = "^4.2.0"
safety-cli = "^0.0.4"

[tool.poetry.dependencies]
python = "^3.12"
